# kong-api-gateway-learning

./: .env.example  README.md  docker-compose.yml  pyproject.toml
docs/: api_gateways.md  kong.md
service1/: main.py
service2/: main.py
