[tool.poetry]
name = "kong-api-gateway-learning"
version = "0.1.0"
description = "Repository containing learning documents and code, related to Kong API Gateway"
authors = ["ali <alihezarpisheh@outlook.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.12"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
